# CPP-HW

Assembler/: mul_long.asm  run.bat  sub_long.asm
BigInteger optimization/: CMakeLists.txt  big_integer.cpp
BigInteger optimization/gtest/: gtest_main.cc
BigInteger optimization/vector/: vector.h
Huffman/: CMakeLists.txt
Huffman/lib/: CMakeLists.txt  compression.cpp  decompression.cpp  huffman_testing.cpp  stream_input.cpp  stream_output.cpp  tree.cpp  word.cpp
Huffman/lib/header/: exceptions.h
Huffman/utility/: CMakeLists.txt  decode_tree.cpp  encode_tree.cpp  main.cpp  my_ifstream.cpp  my_ofstream.cpp
Huffman/utility/header/: decode_tree.h  encode_tree.h  my_ifstream.h  my_ofstream.h
Huffman/utility/lib_header/: stream_output.h  tree.h  word.h
